--- a/app/views/doulins/show.html.erb
+++ b/app/views/doulins/show.html.erb
@@ -334,6 +334,13 @@
 		<div class="espace"></div>
 		
 		<div class='row'>
+			<div class="row" id ="openning-comments">
+				<div class="comment-texte1">Afficher plus de commentaires</div>
+				<div class="comment-texte2">Afficher moins de commentaires</div>
+				<div class="arrow-down-comments"></div>
+				<div class="arrow-up-comments"></div>
+			</div>
+			
 			<div class="row" id="comments-to-close">
 				<% if @doulin.comments.any?%>
 					<%= render "shared/comment_badge", comment:@doulin.comments.first%>
@@ -345,7 +352,7 @@
 			</div>
 			<div class="row" id="comments-to-open">
 				<% @doulin.comments.each do |m| %>
-					<%= render "shared/comment_badge", comment: m%>
+					<%= render "comments/comment", comment: m%>
 			    <% end %>
 			</div>
 			<% if current_user %>
@@ -354,12 +361,6 @@
 			<div class="span3 offset4"><%= link_to "Pour réagir, il faut se connecter", new_session_path(resource_name)%></div>
 			<% end %>
 			
-			<div class="row" id ="openning-comments">
-				<div class="comment-texte1">Afficher plus de commentaires</div>
-				<div class="comment-texte2">Afficher moins de commentaires</div>
-				<div class="arrow-down-comments"></div>
-				<div class="arrow-up-comments"></div>
-			</div>
 			
 		</div>
 		
