--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -514,13 +514,27 @@
 		   font-family: "gotham";
 		}
 		background-color: #EEE;
-		margin-left:0px;
+		margin-left:20px;
 		margin-top:0px;
 		width: 470px;
 		min-height: 162px;
 		margin-bottom: 20px;
 
-		word-wrap:break-word;	
+		word-wrap:break-word;
+		
+		#deletecomment{
+		width: 100px;
+		background-color: #AAD0FF;
+		float: right;
+		margin-right: 10px;
+		margin-top: 10px;
+		height: 24px;
+		font-family: "gotham";
+		color: black;
+		font-size: 18px;
+		text-align: center;
+		padding-top: 6px;
+		}	
 		#gauche-comment{
 			width:155px;
 			#imageuser{
@@ -548,13 +562,12 @@
 				}
 			}
 		}
-
+		
 
 		#content{
 		word-wrap:break-word;
-		width: 440px;
-		margin-left: 5px;
-		margin-top: 10px;
+		width: 430px;
+		margin-left: 30px;
 		background-color: white;
 		min-height: 70px;
 		padding: 10px;
