--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,5 +1,3 @@
-<%= @challenge.comments.count%>
-
 <section id="challenge">
 	<div class="container">
 
@@ -308,11 +306,19 @@
 		
 		
 		<div class='row'>
+			
+			<div class="row" id ="openning-comments">
+				<div class="comment-texte1">Afficher plus de commentaires</div>
+				<div class="comment-texte2">Afficher moins de commentaires</div>
+				<div class="arrow-down-comments"></div>
+				<div class="arrow-up-comments"></div>
+			</div>
+			
 			<div class="row" id="comments-to-close">
 				<% if @challenge.comments.any?%> 
 					<%= render "comments/comment", comment:@challenge.comments.last%>
 					<%if @challenge.comments.count > 1 %>
-						<%= render "comments/comment", comment:@challenge.comments.second%>
+						<%= render "comments/comment", comment:@challenge.comments.first%>
 					<% end%>
 				<%end%>					
 			</div>
@@ -329,13 +335,6 @@
 				<%= link_to "Pour réagir, il faut se connecter", new_session_path(resource_name), class: "ok"%>
 			</div>
 			<% end %>
-			
-			<div class="row" id ="openning-comments">
-				<div class="comment-texte1">Afficher plus de commentaires</div>
-				<div class="comment-texte2">Afficher moins de commentaires</div>
-				<div class="arrow-down-comments"></div>
-				<div class="arrow-up-comments"></div>
-			</div>
 			
 		</div>
 		
