--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -16,7 +16,7 @@
 				<% end%>
 			</div>
 			<div class="span4" id="comment-form">
-				<%= form_for comment, remote: true do |f| %>
+				<%= form_for comment do |f| %>
 				  <%= render 'shared/error_messages', object: f.object %>
 				  <div class="field">
 				    <%= f.text_area :content, placeholder: "Réagis!", class: "content" %>
