--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -1,44 +1,44 @@
 <ul class ="row" id ="profile-header">
 	<% if current_user && current_user == @user%>
 		<li class="notifications-profile">
-			<%= link_to "Notifications", notifications_user_path(@user), class: "text3"%>
+			<%= link_to "Notifications", notifications_user_path(@user), class: cp(notifications_user_path(@user))%>
 			</li>
 		
 
 		<li class= "boutons-pending">
 
-			<%= link_to "En Cours", active_user_path(@user), class: "text3"%>
+			<%= link_to "En Cours", active_user_path(@user), class: cp(active_user_path(@user))%>
 		</li>
 		
 		
 		<li class="bouttons-profile">
-			<%= link_to "Mes Groupes", my_groups_user_path(@user), class: "text3"%>
+			<%= link_to "Mes Groupes", my_groups_user_path(@user), class: cp(my_groups_user_path(@user))%>
 		</li>
 
 
 		<li class="bouttons-profile">
-			<%= link_to "Mon Activité", activities_user_path(@user), class: "text3"%>
+			<%= link_to "Mon Activité", activities_user_path(@user), class: cp(activities_user_path(@user))%>
 		</li>
 		
 	<% else %>
 
 		<li class="notifications-profile">
-			Son Activité
+			<%= link_to "Son Activité",  activities_user_path(@user), class: cp(activities_user_path(@user))%>
 		</li>
 	
 		
 		<li class="bouton-profile">
-			Ses Votes
+			<%= link_to "Ses Votes",  sesvotes_user_path(@user), class: cp(sesvotes_user_path(@user))%>
 		</li>
 
     	
 		<li class= "boutons-pending">
-			Ses Défis
+			<%= link_to "Ses Défis",  sesdefis_user_path(@user), class: cp(sesdefis_user_path(@user))%>
 		</li>
     	
     	
 		<li class="bouttons-profile">
-			Ses Débats Ouverts
+			<%= link_to "Ses Débats Ouverts",  sesdebatsouverts_user_path(@user),class: cp(sesdebatsouverts_user_path(@user))%>
 		</li>
 	
 	<%end%>
