--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -66,14 +66,15 @@
 	margin-left: 270px;
 	
 	#content{
-	width: 435px;
+	width: 440px;
 	margin-top: 10px;
 	font-family:"georgia";
 	font-size: 13px;
 	padding-top: 5px;
 	padding-left: 5px;
-	min-height: 60px;
-	background-color: white;}
+	min-height: 70px;
+	background-color: white;
+	margin-bottom:10px;}
 	
 	word-wrap:break-word;	
 	#gauche-comment{
