--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -385,6 +385,16 @@
 		font-weight: bold;
 		font-size: 16px;
 		text-align: center;
+		
+		.error{
+		margin-top: 15px;
+		margin-left: 0px;
+		font-family: "georgia";
+		font-style: italic;
+		font-size: 13px;
+		text-align: center;
+		color: #FF6969;
+		}
 	}
 	
 	#sign_in2{
