--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -148,7 +148,7 @@
 					<li class: "tiret">|<li>
 					<li><%= link_to "F.A.Q.", faq_path, class: "lien"%></li>
 					<li class: "tiret">|<li>
-					<li><%= link_to "Communiqué de presse", presse_path, class: "lien"%></li>										
+					<li><%= link_to "Astuces dialectiques", presse_path, class: "lien"%></li>										
 					<li class: "tiret">|<li>
 					<li><%= link_to "Contact", contact_path, class: "lien"%></li>										
 					<li class: "tiret">|<li>
