--- a/app/views/static_pages/list_doulins.html.erb
+++ b/app/views/static_pages/list_doulins.html.erb
@@ -1,22 +1,19 @@
 <div class="container" id="index-doulins">
 	<div class="row" id="open-infos">
 		<div class="span11" id="informations-doulin">
-			<div class="span3" id="informations-doulin1">
-				<div class="texte">
-					Débats d'experts
-					comment ça marche ?				
+			<div class="row" id="informations-challenge">
+				<div class ="span9" id="textexp">
+					Débats d'experts, comment ça marche ?				
 				</div>
-				<div class="texte2">
-					Deux experts, aux points de vue contradictoires, débattent chaque semaine. Vote pour l'expert le plus convaincant !
-				</div>
-			</div>
-			
-			<div class="span4" id="informations-doulin2">
-			</div>
-			<div class="span4" id="informations-doulin3">
-			</div>
-			<div class="span1" id="fermer-explication">
+			 	<div class="span1" id="fermer-explication">
 				X
+				</div>
+		    </div>
+			<div class="row" id="ouvrons-encore">
+				<div class="image-gauche">
+					<%= image_tag("explication-2-01.png", class: "fleche10")%>
+				
+				</div>
 			</div>
 		</div>
 	</div>
