--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -445,11 +445,14 @@ input.ajust-input, textarea.ajust-input {
 		margin-left: 0px;
 	}
 
+	#doulin-badge2:hover{
+		background-color: #AAD0FF;
+	}
 	#doulin-badge2{
 		margin-left: 0px;
 		width: 470px;
 		height: 128px;
-		background-color:#C9C9C9;
+		background-color:#CCC;
 		
 		
 		#image-gauche{
