--- a/app/views/arguments/new.html.erb
+++ b/app/views/arguments/new.html.erb
@@ -1,22 +1,7 @@
-<h1>New Comment</h1>
-
-<%= form_for [@argumentable, @argument] do |f| %>
- <% if @argument.errors.any? %>
-	<div class="error messages">
-		<h2>Please correct the following errors </h2>
-		<ul>
-			<% @argument.errors.full_messages.each do |msg|%>
-				<li><%= msg %></li>
-			<%end%>
-		</ul>
+<section id="correction">
+<div class="container">
+	<div class="centrons-tout">
+	<%= render "shared/argument_neutre_form", argumentable: @argumentable, argument: @argument, position: 0 %>
 	</div>
- <%end%>
- 
- <div class ="field">
-	<%= f.text_area:title, rows:1 %>
-	<%= f.text_area:content, rows:8 %>
- </div>
- <div class ="actions">
-	<%= f.submit%>
- </div>
-<% end %>
+</div>
+</section>
