--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,63 @@
-<% content_for :main_content do %>
+<div class="container">
+		<% content_for :main_content do %>
+<div id="sign_in">
+	<div class="row" id="sign_in1">
+	<span class="error"><%= devise_error_messages! %></span>
+	</div>
+	
+	<div class="facebook">
+		<span>Connecte-toi via</br></span><%=link_to image_tag("facebook-blanc.png"), user_omniauth_authorize_path(:facebook),
+		  													class: "via"%>
+	</div>
+	
+	<div class="row" id="sign_in2">
+		<div class="span3" id="sign_in3">
+			<div class="row" id="sign_in4">
+				<span class="texte1">Déjà un mouton?</span>
+			</div>
+			<div class="row" id= "sign_in4">
+				<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+				<%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %>
+			</div>
+			<div class="row" id= "sign_in4">
+				<%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field1"%>
+			</div>
+			<div class="row" id= "sign_in4">
+				
+					<span class="texte"><%= link_to "Mot de passe oublié?", root_path, class: "lien"%>
+					</span>
+					<%= f.submit "OK", class: "submit-login" %>
+				<% end%>
+			</div>
+		</div>
 
-<h2>Sign up</h2>
+		<div class="span3" id="sign_up">
+			<div class="espace"></div>
+			<div class="row" id="sign_in4">
+				<span class="texte1"> Inscris toi !</span>
+			</div>
+			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <% if f.object.password_required?%>
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-  <%end%>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
+			  <div class="row" id="sign_in4">
+			  <%= f.text_field :name, placeholder: "Pseudo:", class: "login-field" %>
+			  </div>
+			<div class="row" id= "sign_in4">
+				<%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %>
+			</div>
+			<div class="row" id= "sign_in4">
+				<%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field1"%><%= f.submit "OK", class: "submit-login" %>	
+			</div>
+			<div class="row" id= "sign_in4">
+				
+			<% end%>
+			</div>
+			<div class="espace"></div>
+		</div>	
+	</div>
+	<div class="logo2">
+		<%= link_to (image_tag "gros-mouton-01.png"), root_path%>
+		<div class="titre"><%= link_to "moutoners", root_path, class: "title"%></div>
+	</div>
+		
+</div>
 <% end %>
