--- a/app/views/shared/_argument_form.html.erb
+++ b/app/views/shared/_argument_form.html.erb
@@ -1,11 +1,11 @@
 <section id="new-argument">
 	
-	<div class="span6" id='new-argument1'>
+
 		<%= form_for [argumentable, argument] do |f| %>
 		
 		<% if argument.errors.any? %>
 		<div class="error-messages-newarg">
-			<h2>Please correct the following errors </h2>
+			<h2>Quelques petites erreurs : </h2>
 			<ul>
 				<% argument.errors.full_messages.each do |msg|%>
 					<li><%= msg %></li>
@@ -13,7 +13,7 @@
 			</ul>
 		</div>
 	 	<%end%>
-		
+	<div class="span6" id='new-argument1'>
 		<div class='row'>
 			<div class='span4' id="title-form">
 					<%= f.text_field:title, rows:1, class: "title-newarg", placeholder: "Titre (moins de 100 caractères)" %>
