--- a/app/views/static_pages/apprendre_a_debattre.html.erb
+++ b/app/views/static_pages/apprendre_a_debattre.html.erb
@@ -38,6 +38,7 @@
 		</div>
 	  </div>
     </div>
+<div class="row" id="isabelle"><%= image_tag("tout-gratuit-01.png", class: "image")%></div>
 	<div class="row" id="promesses">
 		Pas de publicité,</br>Pas de parrainage,</br>Pas de sponsors.
 	</div>
@@ -46,6 +47,35 @@
 		Nous ne ferons jamais commerce de vos informations.
 		</div>
 	</div>
+	<div class="row" id="abobo1">
+		Pourquoi s'abonner?
+	</div>
+	<div class="row" id="raison1">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">1</div>
+		</div>
+		<div class="text2">Avoir accès à tous les débats, les groupes,
+		les événements et les fonctionnalités de Moutoners.
+		</div>
+	</div>
+	<div class="row" id="raison2">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">2</div>
+		</div>
+		<div class="text2">Faire partie du cercle fermé des débatteurs Moutoners.
+		</div>
+	</div>
+	<div class="row" id="raison3">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">3</div>
+		</div>
+		<div class="text2">Nous aider à maintenir une ligne éditorialede qualité, en étant indépendant de la pub !
+		</div>
+	</div>
+	
 	<div class="row" id="photo-abonnement">
 	<%= image_tag('moutons-abonnement.png', :alt => 'Moutoners') %>
 	</div>
