--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,9 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
+	ah ok
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
+			ah ok ta meeeere
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -10,7 +11,7 @@
       </ul>
     </div>
   <% end %>
-
+			ah ok ta meeeere
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
