--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -147,9 +147,10 @@ input.ajust-input, textarea.ajust-input {
 		
 		.categ{
 			padding-left: 10px;
-			font-size:15px;
+			font-size:14px;
 			color: #000000;
 			font-family:"gotham";
+			font-weight: bold;
 		}
 	}
 }
