--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -187,7 +187,7 @@
 			Color: white;
 			font-family: "gotham";
 			font-size: 16px;
-			font-weight: bold;
+			font-weight: 700;
 			padding-left: 5px;
 			height:24px;
 			padding-top: 5px;
