--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -26,12 +26,22 @@
 }
 
 @font-face {
+    font-family: 'gotham-Bold';
+    src: url(font-path('gotham-Bold.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('gotham-Bold.woff')) format('woff'), 
+         url(font-path('gotham-Bold.ttf'))  format('truetype'),
+         url(font-path('gotham-Bold.svg') + "#gotham-Bold") format('svg');
+}
+
+
+@font-face {
     font-family: 'bebasneue-webfont';
     src: url(font-path('bebasneue-webfont.eot') + "?#iefix") format('embedded-opentype'),
          url(font-path('bebasneue-webfont.woff')) format('woff'), 
          url(font-path('bebasneue-webfont.ttf'))  format('truetype'),
          url(font-path('bebasneue-webfont.svg') + "#bebasneue-webfont") format('svg');
 }
+
 
 h1 a, h2 a, h3 a, h4 a, h5 a {
   color: #000000;
@@ -149,8 +159,7 @@ input.ajust-input, textarea.ajust-input {
 			padding-left: 10px;
 			font-size:14px;
 			color: #000000;
-			font-family:"gotham";
-			font-weight: 700;
+			font-family:"gotham-Bold";
 		}
 	}
 }
